# furia-chatbot

./: .env.sample  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/: scrapper.py
backend/models/: team.py
backend/scrappers/: draft5.py  hltv.py
frontend/: app.py
