[tool.poetry]
name = "context-based-chatbot"
version = "0.1.0"
description = ""
authors = ["Ruan Dias <ruandiax.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "context_based_chatbot"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.45.0"
beautifulsoup4 = "^4.13.4"
pydantic = "^2.11.4"
langchain = "^0.3.25"
langchain-community = "^0.3.23"
boto3 = "^1.38.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"